==> mkulesh/stm32WindowSensor/src/src/RFM69.cpp <==
#include <algorithm>
#include "RFM69.h"
#include "RFM69registers.h"
#define USART_DEBUG_MODULE "RFM: "

bool RFM69::initialize (uint8_t freqBand, uint8_t nodeID, uint8_t networkID)
{
    const uint8_t CONFIG[][2] = {
        /* 0x01 */{ REG_OPMODE, RF_OPMODE_SEQUENCER_ON | RF_OPMODE_LISTEN_OFF | RF_OPMODE_STANDBY },
        /* 0x02 */{ REG_DATAMODUL, RF_DATAMODUL_DATAMODE_PACKET | RF_DATAMODUL_MODULATIONTYPE_FSK | RF_DATAMODUL_MODULATIONSHAPING_00 }, // no shaping
        /* 0x03 */{ REG_BITRATEMSB, RF_BITRATEMSB_55555 }, // default: 4.8 KBPS
        /* 0x04 */{ REG_BITRATELSB, RF_BITRATELSB_55555 },
        /* 0x05 */{ REG_FDEVMSB, RF_FDEVMSB_50000 }, // default: 5KHz, (FDEV + BitRate / 2 <= 500KHz)
        /* 0x06 */{ REG_FDEVLSB, RF_FDEVLSB_50000 },

        /* 0x07 */{ REG_FRFMSB,
                    (uint8_t) (
                        freqBand == RF69_315MHZ ?
                            RF_FRFMSB_315 :
                            (freqBand == RF69_433MHZ ?
                                RF_FRFMSB_433 :
                                (freqBand == RF69_868MHZ ? RF_FRFMSB_868 : RF_FRFMSB_915))) },
        /* 0x08 */{ REG_FRFMID,
                    (uint8_t) (
                        freqBand == RF69_315MHZ ?
                            RF_FRFMID_315 :
                            (freqBand == RF69_433MHZ ?
                                RF_FRFMID_433 :
                                (freqBand == RF69_868MHZ ? RF_FRFMID_868 : RF_FRFMID_915))) },
        /* 0x09 */{ REG_FRFLSB,
                    (uint8_t) (
                        freqBand == RF69_315MHZ ?
                            RF_FRFLSB_315 :
                            (freqBand == RF69_433MHZ ?
                                RF_FRFLSB_433 :
                                (freqBand == RF69_868MHZ ? RF_FRFLSB_868 : RF_FRFLSB_915))) },

        // looks like PA1 and PA2 are not implemented on RFM69W, hence the max output power is 13dBm
        // +17dBm and +20dBm are possible on RFM69HW
        // +13dBm formula: Pout = -18 + OutputPower (with PA0 or PA1**)
        // +17dBm formula: Pout = -14 + OutputPower (with PA1 and PA2)**
        // +20dBm formula: Pout = -11 + OutputPower (with PA1 and PA2)** and high power PA settings (section 3.3.7 in datasheet)
        ///* 0x11 */ { REG_PALEVEL, RF_PALEVEL_PA0_ON | RF_PALEVEL_PA1_OFF | RF_PALEVEL_PA2_OFF | RF_PALEVEL_OUTPUTPOWER_11111},
        ///* 0x13 */ { REG_OCP, RF_OCP_ON | RF_OCP_TRIM_95 }, // over current protection (default is 95mA)

        // RXBW defaults are { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_5} (RxBw: 10.4KHz)
        /* 0x19 */{ REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_16 | RF_RXBW_EXP_2 }, // (BitRate < 2 * RxBw)
        //for BR-19200: /* 0x19 */ { REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_24 | RF_RXBW_EXP_3 },
        /* 0x25 */{ REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_01 }, // DIO0 is the only IRQ we're using
        /* 0x26 */{ REG_DIOMAPPING2, RF_DIOMAPPING2_CLKOUT_OFF }, // DIO5 ClkOut disable for power saving
        /* 0x28 */{ REG_IRQFLAGS2, RF_IRQFLAGS2_FIFOOVERRUN }, // writing to this bit ensures that the FIFO & status flags are reset
        /* 0x29 */{ REG_RSSITHRESH, 220 }, // must be set to dBm = (-Sensitivity / 2), default is 0xE4 = 228 so -114dBm
        ///* 0x2D */ { REG_PREAMBLELSB, RF_PREAMBLESIZE_LSB_VALUE } // default 3 preamble bytes 0xAAAAAA
        /* 0x2E */{ REG_SYNCCONFIG, RF_SYNC_ON | RF_SYNC_FIFOFILL_AUTO | RF_SYNC_SIZE_2 | RF_SYNC_TOL_0 },
        /* 0x2F */{ REG_SYNCVALUE1, 0x2D }, // attempt to make this compatible with sync1 byte of RFM12B lib
        /* 0x30 */{ REG_SYNCVALUE2, networkID }, // NETWORK ID
        /* 0x37 */{ REG_PACKETCONFIG1, RF_PACKET1_FORMAT_VARIABLE | RF_PACKET1_DCFREE_OFF | RF_PACKET1_CRC_ON | RF_PACKET1_CRCAUTOCLEAR_ON | RF_PACKET1_ADRSFILTERING_OFF },
        /* 0x38 */{ REG_PAYLOADLENGTH, RF69_MAX_DATA_LEN + 5 }, // in variable length mode: the max frame size, not used in TX
        ///* 0x39 */ { REG_NODEADRS, nodeID }, // turned off because we're not using address filtering
        /* 0x3C */{ REG_FIFOTHRESH, RF_FIFOTHRESH_TXSTART_FIFONOTEMPTY | RF_FIFOTHRESH_VALUE }, // TX on FIFO not empty
        /* 0x3D */{ REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_2BITS | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, // RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
        //for BR-19200: /* 0x3D */ { REG_PACKETCONFIG2, RF_PACKET2_RXRESTARTDELAY_NONE | RF_PACKET2_AUTORXRESTART_ON | RF_PACKET2_AES_OFF }, // RXRESTARTDELAY must match transmitter PA ramp-down time (bitrate dependent)
        /* 0x6F */{ REG_TESTDAGC, RF_DAGC_IMPROVED_LOWBETA0 }, // run DAGC continuously in RX mode for Fading Margin Improvement, recommended default for AfcLowBetaOn=0
        { 255, 0 } };

    uint32_t start = HAL_GetTick();
    uint32_t timeout = 50;
    do
    {
        writeReg(REG_SYNCVALUE1, 0xAA);
    }
    while (readReg(REG_SYNCVALUE1) != 0xaa && HAL_GetTick() - start < timeout);
    start = HAL_GetTick();
    do
    {
        writeReg(REG_SYNCVALUE1, 0x55);
    }
    while (readReg(REG_SYNCVALUE1) != 0x55 && HAL_GetTick() - start < timeout);

    for (uint8_t i = 0; CONFIG[i][0] != 255; i++)
    {
        writeReg(CONFIG[i][0], CONFIG[i][1]);
    }

    setMode(RF69_MODE_STANDBY);
    start = HAL_GetTick();
    while (((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00) && HAL_GetTick() - start < timeout); // wait for ModeReady
    if (HAL_GetTick() - start >= timeout)
    {
        return false;
    }

    setAddress(nodeID);
    return true;
}

void RFM69::setMode (uint8_t newMode, bool waitForReady)
{
    if (newMode == mode) return;

    switch (newMode)
    {
    case RF69_MODE_TX:
        writeReg(REG_OPMODE, (readReg(REG_OPMODE) & 0xE3) | RF_OPMODE_TRANSMITTER);
        if (isRFM69HW) setHighPowerRegs(true);
        break;
    case RF69_MODE_RX:
        writeReg(REG_OPMODE, (readReg(REG_OPMODE) & 0xE3) | RF_OPMODE_RECEIVER);
        if (isRFM69HW) setHighPowerRegs(false);
        break;
    case RF69_MODE_SYNTH:
        writeReg(REG_OPMODE, (readReg(REG_OPMODE) & 0xE3) | RF_OPMODE_SYNTHESIZER);
        break;
    case RF69_MODE_STANDBY:
        writeReg(REG_OPMODE, (readReg(REG_OPMODE) & 0xE3) | RF_OPMODE_STANDBY);
        break;
    case RF69_MODE_SLEEP:
        writeReg(REG_OPMODE, (readReg(REG_OPMODE) & 0xE3) | RF_OPMODE_SLEEP);
        break;
    default:
        return;
    }

    if (waitForReady)
    {
        while ((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00); // wait for ModeReady
    }

    mode = newMode;
}

uint32_t RFM69::send (uint8_t toAddress, uint8_t* buffer, uint16_t bufferSize, bool requestACK, bool sendACK)
{
    setMode(RF69_MODE_STANDBY, /*waitForReady=*/ true); // turn off receiver to prevent reception while filling fifo
    writeReg(REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_00); // DIO0 is "Packet Sent"

    // control byte
    if (bufferSize > RF69_MAX_DATA_LEN)
    {
        bufferSize = RF69_MAX_DATA_LEN;
    }

    uint8_t CTLbyte = 0x00;
    if (sendACK)
    {
        CTLbyte = RFM69_CTL_SENDACK;
    }
    else if (requestACK)
    {
        CTLbyte = RFM69_CTL_REQACK;
    }

    uint8_t cmd[6] = {(uint8_t)(REG_FIFO | 0x80), (uint8_t)(bufferSize + 3), toAddress, address, CTLbyte, 0};

    // write to FIFO
    select();
    spi.transmitBlocking(cmd, 5);
    spi.transmitBlocking(buffer, bufferSize);
    unselect();

    // no need to wait for transmit mode to be ready since its handled by the radio
    setMode(RF69_MODE_TX);

    uint32_t txStart = HAL_GetTick();
    while (!interruptPin.getBit() && HAL_GetTick() - txStart < RF69_TX_LIMIT_MS); // wait for DIO0 to turn HIGH signalling transmission finish
    setMode(RF69_MODE_STANDBY, /*waitForReady=*/ true);
    receiveBegin();

    return (HAL_GetTick() - txStart);
}

uint8_t RFM69::readReg (uint8_t addr, bool _unselect)
{
    // send address + r/w bit
    uint8_t out[2] = {(uint8_t)(addr & 0x7F), 0};
    uint8_t in[2] = {0,0};
    select();
    spi.transmitBlocking(out, 1);
    HAL_Delay(spiDelay);
    spi.receiveBlocking(in, 1);
    if (_unselect)
    {
        unselect();
    }
    return in[0];
}

void RFM69::readAllRegs ()
{
    for (uint8_t regAddr = 1; regAddr <= 0x4F; regAddr++)
    {
        uint8_t regVal = readReg(regAddr);
        if (regVal != 0)
        {
            USART_DEBUG(UsartLogger::Manupulator::TAB << UsartLogger::Manupulator::HEX << regAddr << ": " << regVal);
        }
    }
}
